--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -40,7 +40,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }} # Docker Hub username from GitHub secrets
-          password: ${{ secrets.DOCKERHUB_PASSWORD }} # Docker Hub password from GitHub secrets
+          password: ${{ secrets.DOCKERHUB_TOKEN }} # Docker Hub password from GitHub secrets
 
       - name: Build and push backend image # Build and push the backend Docker image
         uses: docker/build-push-action@v2
